--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,7 +32,7 @@
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
-				<form class="login100-form validate-form">
+				<form class="login100-form validate-form" method="POST" action="/person">
 					<span class="login100-form-title p-b-26">
 						Hello Sir, you can create a person right here!
 					</span>
@@ -55,7 +55,7 @@
 					<div class="container-login100-form-btn" data-validate = "Valid email is: a@b.c">
 						<div class="wrap-login100-form-btn">
 							<div class="login100-form-bgbtn"></div>
-							<button class="login100-form-btn">
+							<button type=submit value=Send class="login100-form-btn">
 								Create!
 							</button>
 						</div>
